package TypingPractice;

public interface Observer {
    void update(String s, int currentChar, int Err,int speed);
}
